add the new repository info

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+# IMPORTANT
+The repository has been moved to [GitLab.com/ds.archived-projects/vimConfig_old](https://gitlab.com/ds.archived-projects/vimConfig_old).
+
+
 This is very old and should not be used
 
 This is my vim configurations
